# JEMZnTrack

./: .gitignore  .zntrack.json  README.md  ZnEvaluateCalibration.ipynb  ZnJEMProject.ipynb  ZnTrain.ipynb  ZnTrainMaxEntropyL1.ipynb  ZnTrainMaxEntropyL2.ipynb  Znv3EvaluateClassification.ipynb  Znv3JEMProject.ipynb  Znv3MaxEntropyL1.ipynb  Znv3MaxEntropyL2.ipynb  Znv3Train.ipynb  cluster-script.sh  dvc.yaml  eval_args.py  jemsharedclasses.py  metrics.diff  params.yaml  pyproject.toml  train_args.py  zntrack.json
.dvc/: config
.dvc/plots/: confidence.json
docs/source/: checkpointing.rst  conf.py  datasets.rst  index.rst  intro.rst  pipelines.rst  running.rst  setup.rst
experiment/: .gitignore  max-entropy-L1_augmented_calibration.csv  max-entropy-L1_augmented_scores.json  max-entropy-L2_augmented_calibration.csv  max-entropy-L2_augmented_scores.json  x-entropy_augmented_calibration.csv  x-entropy_augmented_scores.json
nodes/MaxEntropyL1/: metrics_no_cache.json
nodes/MaxEntropyL2/: metrics_no_cache.json
nodes/XEntropyAugmented/: .gitignore  metrics_no_cache.json
nodes/max-entropy-L1_augmented/: metrics_no_cache.json
nodes/max-entropy-L2_augmented/: metrics_no_cache.json
nodes/train_args/: metrics_no_cache.json
nodes/train_argsL1/: metrics_no_cache.json
nodes/train_argsL2/: metrics_no_cache.json
nodes/x-entropy_augmented/: metrics_no_cache.json
src/: EvaluateX.py  MaxEntropyL1.py  MaxEntropyL2.py  XEntropyAugmented.py  eval_args.py  train_args.py  train_argsL1.py  train_argsL2.py
